[package]
name = "ncnn-sys"
version = "0.2.0"
authors = ["DarkSky"]
edition = "2021"
links = "ncnn"
license-file = "ncnn/LICENSE.txt"
description = "just a ncnn rust unsafe binding"
homepage = "https://github.com/darkskygit/waifu2x.rs"
repository = "https://github.com/darkskygit/waifu2x.rs"
keywords = ["binding", "ncnn"]
exclude = [
    "ncnn/**/*",
    "!ncnn/ncnn/**/*",
    "vulkan/**/*.pdb",
    "**/.git",
    ".gitmodules"
]
readme = "README.md"

[features]
default = ["bundled"]
bundled = []

[build-dependencies]
cmake = "0.1.49"
path-absolutize = "3.0.14"
fs_extra = "1.3.0"
