[package]
name = "waifu2x"
version = "0.1.0"
authors = ["DarkSky"]
edition = "2018"
links = "waifu2x"
description = "A waifu2x-ncnn-vulkan Rust binding"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/darkskygit/waifu2x.rs"
repository = "https://github.com/darkskygit/waifu2x.rs"
keywords = ["binding", "waifu2x", "ncnn", "vulkan"]
include = ["src/**/*", "waifu2x/**/*", "build.rs", "LICENSE", "README.md"]
readme = "README.md"

[features]
default = []
noise = []
noise_outside_model = []
upconv7 = []
upconv7_outside_model = []
model_bundled = []

[dependencies]
libc = "0.2.139"
ncnn-sys = "0.2.0"

[dependencies.image]
version = "0.24.5"
default-features = false

[build-dependencies]
cmake = "0.1.49"
path-absolutize = "3.0.14"
